--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <section>
-            this is a calculator
+            <div class="calculator">
+                
+            </div>
         </section>
     </body>
 </html>
