--- a/index.html
+++ b/index.html
@@ -8,8 +8,35 @@
     </head>
     <body>
         <section>
-            <div class="calculator">
-                
+            <div class="running"><span>123</span></div>
+            <div class="first row">
+                <div class="button">C</div>
+                <div class="button">+/-</div>
+                <div class="button">%</div>
+                <div class="button operation">÷</div>
+            </div>
+            <div class="second row">
+                <div class="button">7</div>
+                <div class="button">8</div>
+                <div class="button">9</div>
+                <div class="button operation">×</div>
+            </div>
+            <div class="third row">
+                <div class="button">4</div>
+                <div class="button">5</div>
+                <div class="button">6</div>
+                <div class="button operation">−</div>
+            </div>
+            <div class="fourth row">
+                <div class="button">1</div>
+                <div class="button">2</div>
+                <div class="button">3</div>
+                <div class="button operation">+</div>
+            </div>
+            <div class="fifth row">
+                <div class="button zero">0</div>
+                <div class="button">.</div>
+                <div class="button operation equal">=</div>
             </div>
         </section>
     </body>
