--- a/index.html
+++ b/index.html
@@ -4,38 +4,38 @@
         <title>Odin Calculator</title>  
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./style.css">
-        <script src="./script.js"></script>
+        <script src="./script.js" defer></script>
     </head>
     <body>
         <section>
-            <div class="running"><span>123</span></div>
+            <div class="running"><span>0</span></div>
             <div class="first row">
-                <div class="button">C</div>
+                <div id="clear" class="button">C</div>
                 <div class="button">+/-</div>
                 <div class="button">%</div>
                 <div class="button operation">÷</div>
             </div>
             <div class="second row">
-                <div class="button">7</div>
-                <div class="button">8</div>
-                <div class="button">9</div>
+                <div class="button num">7</div>
+                <div class="button num">8</div>
+                <div class="button num">9</div>
                 <div class="button operation">×</div>
             </div>
             <div class="third row">
-                <div class="button">4</div>
-                <div class="button">5</div>
-                <div class="button">6</div>
+                <div class="button num">4</div>
+                <div class="button num">5</div>
+                <div class="button num">6</div>
                 <div class="button operation">−</div>
             </div>
             <div class="fourth row">
-                <div class="button">1</div>
-                <div class="button">2</div>
-                <div class="button">3</div>
+                <div class="button num">1</div>
+                <div class="button num">2</div>
+                <div class="button num">3</div>
                 <div class="button operation">+</div>
             </div>
             <div class="fifth row">
-                <div class="button zero">0</div>
-                <div class="button">.</div>
+                <div class="button zero num">0</div>
+                <div class="button num dot">.</div>
                 <div class="button operation equal">=</div>
             </div>
         </section>
